--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -90,9 +90,16 @@ color: var(--stronger-color);
 -o-background-size: cover;
 }
 
-#kissingCouple{
-  margin: 0 auto;
-  max-height: 40vh;
+#dress{
+  margin: 1em auto;
+  max-width: 40vw;
+  border-radius: 10px;
+  opacity: 0.7;
+}
+
+#original{
+  margin: 1em auto;
+  max-height: 20vw;
   border-radius: 10px;
 }
 
@@ -162,7 +169,7 @@ and (max-device-width : 1024px)  {
 	font-size: 1.2em;
  }
 
-#hotels{
+#abc{
   padding-top: 100px;
 	height: 100%;
 	padding-bottom: 10vh;
@@ -170,27 +177,14 @@ and (max-device-width : 1024px)  {
   margin: 0 auto;
 }
 
-#hotels a{
+#abc h5,p{
+  text-align: left;
+}
+
+#abc a{
 	font-size: 1.3em;
 	font-family: var(--font-unica);
 	color: var(--stronger-color);
  }
 
-
-.hotel-photo{
-  height: 100px;
-  width: 140px;
-	margin: 0 auto;
-	-webkit-box-shadow: 2px 2px 6px -1px rgba(0,0,0,0.75);
-	-moz-box-shadow: 2px 2px 6px -1px rgba(0,0,0,0.75);
-	box-shadow: 2px 2px 6px -1px rgba(0,0,0,0.75);
-	border-radius: 7px;
-}
-
-.hotels-features ul{
-	padding-top: 10px;
-	font-size: .9em;
-  line-height: 1.1em;
-  padding-left: 0;
-}
 
