--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,7 +62,7 @@ color: var(--stronger-color);
 #home{
 	width: 100vw;
   	height: 100vh;
-  	background-image: url("../img/home.jpg");
+  	background-image: url("../img/home3.jpg");
   	z-index: 0;
   	background-position: center;
   	background-repeat: no-repeat;
